# wasm-video-player

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ko.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.specify/memory/: constitution.md
.specify/specs/: README.md
crates/player-core/: Cargo.toml
crates/player-core/src/: error.rs  frame_buffer.rs  lib.rs
crates/player-core/src/decoder/: mod.rs
crates/player-core/src/demuxer/: mod.rs
crates/player-core/src/subtitle/: mod.rs
docs/: README.md
docs/plans/: 2026-01-23-video-player-design.md
e2e/: seek-benchmark.spec.ts  seek.spec.ts
pkg/: package.json  player_core.d.ts  player_core.js  player_core_bg.wasm  player_core_bg.wasm.d.ts
public/: debug.html
src/: App.ts  main.test.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/__mocks__/: player_core.ts
src/input/: KeyboardHandler.test.ts  KeyboardHandler.ts  SeekManager.test.ts  SeekManager.ts  index.ts
src/player/: AudioPlayer.test.ts  AudioPlayer.ts  Demuxer.ts  FFmpegDecoder.test.ts  FFmpegDecoder.ts  Player.test.ts  Player.ts  WasmBridge.test.ts  WasmBridge.ts  WebCodecsDecoder.test.ts  WebCodecsDecoder.ts
src/renderer/: WebGLRenderer.test.ts  WebGLRenderer.ts
src/settings/: LocalStorageAdapter.test.ts  LocalStorageAdapter.ts  Settings.test.ts  Settings.ts  SettingsPanel.test.ts  SettingsPanel.ts  defaults.ts  index.ts  types.ts
src/storage/: WatchHistory.ts  index.ts
src/styles/: controls.css  index.css  (+5 more)
(+48 files in other folders)
