[package]
name = "player-core"
version = "0.1.0"
edition = "2021"
authors = ["sangyi"]
description = "WASM Video Player Core - High-performance video decoding"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# FFmpeg binding - will be configured for WASM
# ffmpeg-next = "7.0"  # Uncomment when ready

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
